--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@quasar/app-vite": "^1.3.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^16.3.1",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
     "workbox-build": "^6.5.0",
     "workbox-cacheable-response": "^6.5.0",
     "workbox-core": "^6.5.0",
