series select working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wisdom.myLanguage.net.au",
+  "name": "finding_wisdom",
   "version": "0.0.1",
   "description": "Finding Wisdom",
   "productName": "Finding Wisdom",
